[BUGFIX] Correct wrong space between images in ce's
When images in standard content elements are shown in
more rows the vertical spacing was too big.

--- a/Resources/Public/Scss/ThemeCustom/Elements/_content-element.scss
+++ b/Resources/Public/Scss/ThemeCustom/Elements/_content-element.scss
@@ -10,15 +10,11 @@
 //
 // Pictures
 //
-figure {
-  margin-bottom: 1.7em;
-}
 .frame-type-textpic, .frame-type-image {
   .gallery-item {
     text-align: center;
   }
   figure {
-    display: inline-block;
     text-align: left;
   }
 }
